changed advisor to mentor

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -88,7 +88,7 @@
                       <div class="col-sm-12">
                         <h4 class="text-center" style="color: #000; font-size: 20px; padding-left: 20px;">I am a:&nbsp;
                           <label class="switch switch-danger"><input id="founder" type="checkbox"><span></span></label> Founder&nbsp;
-                          <label class="switch switch-info"><input id="advisor" type="checkbox"><span></span></label> Advisor&nbsp;
+                          <label class="switch switch-info"><input id="mentor" type="checkbox"><span></span></label> Mentor&nbsp;
                           <label class="switch switch-success"><input id="investor" type="checkbox"><span></span></label> Investor&nbsp;
                         </h4>
                       </div>
@@ -170,7 +170,7 @@
           <!-- Sign Up Action -->
           <section class="site-content site-section site-section-light themed-background-dark-night">
             <div class="container">
-              <h3 class="site-heading text-center">Are you a startup <strong>founder</strong>, <strong>advisor</strong>, or <strong>investor</strong>?</h3>
+              <h3 class="site-heading text-center">Are you a startup <strong>founder</strong>, <strong>mentor</strong>, or <strong>investor</strong>?</h3>
               <div class="site-block text-center">
                 <button type="submit" class="to-top btn btn-primary" style="font-size:24px; padding:15px;">Request an invite</button>
               </div>
@@ -240,7 +240,7 @@
               var location = $('#location').val();
               var investor = $('#investor').is(':checked');
               var founder = $('#founder').is(':checked');
-              var advisor = $('#advisor').is(':checked');
+              var mentor = $('#mentor').is(':checked');
 
               mixpanel.identify(email);
               mixpanel.track("Signed Up");
@@ -249,7 +249,7 @@
                 "$created": Date(),
                 "Location": location,
                 "Founder": founder,
-                "Advisor": advisor,
+                "Mentor": mentor,
                 "Investor": investor
               });
 
