missed a couple advisors

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -146,14 +146,14 @@
                     <i class="icon-flag"></i>
                   </a>
                   <h4 class="site-heading"><strong>Build</strong> Clusters</h4>
-                  <p class="text-left remove-margin">Identify the leaders in your community and organize them around industry clusters. Each cluster includes startups, advisors, investors, and resources such as coworking space, incubators, and networking events.</p>
+                  <p class="text-left remove-margin">Identify the leaders in your community and organize them around industry clusters. Each cluster includes startups, mentors, investors, and resources such as coworking space, incubators, and networking events.</p>
                 </div>
                 <div class="col-sm-4">
                   <a class="circle themed-background-modern">
                     <i class="icon-graduation-cap"></i>
                   </a>
                   <h4 class="site-heading"><strong>Connect</strong> People</h4>
-                  <p class="text-left remove-margin">Startup founders can search for advisors and investors based on skills pulled from Linkedin profiles. Create invite-only networks for alumni of accelerators, universities, and trade organizations.</p>
+                  <p class="text-left remove-margin">Startup founders can search for mentors and investors based on skills pulled from Linkedin profiles. Create invite-only networks for alumni of accelerators, universities, and trade organizations.</p>
                 </div>
                 <div class="col-sm-4">
                   <a class="circle themed-background-spring">
