working invite page

--- a/app/app.html
+++ b/app/app.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="styles/style.css">
     <!-- endbuild -->
 
+    <!-- build:remove --><script src="http://localhost:35729/livereload.js"></script><!-- endbuild -->
+
 </head>
 
 <!-- Body -->
@@ -115,6 +117,7 @@
 <script src="components/users/user.controller.js"></script>
 <script src="components/startups/startup.controller.js"></script>
 <script src="components/common/auth/auth.controller.js"></script>
+<script src="components/common/setup/setup.controller.js"></script>
 <script src="components/common/nav/nav.controller.js"></script>
 <script src="components/common/errors/errors.controller.js"></script>
 <!-- endbuild -->
