working on upload

--- a/app/app.html
+++ b/app/app.html
@@ -102,6 +102,7 @@
 <script src="../bower_components/angulartics/dist/angulartics.min.js"></script>
 <script src="../bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
 <script src="../bower_components/angular-knowtify/dist/angular-knowtify.min.js"></script>
+<script src="../bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
 
 <!-- endbuild -->
 
