editable profile done except image

--- a/app/app.html
+++ b/app/app.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.min.css" />
     <link rel="stylesheet" href="../bower_components/angular-chart.js/dist/angular-chart.css">
     <link rel="stylesheet" href="../bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" />
+    <link rel="stylesheet" href="../bower_components/angular-xeditable/dist/css/xeditable.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -91,6 +92,7 @@
 <script src="../bower_components/angular-notify/dist/angular-notify.min.js"></script>
 <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
 <script src="../bower_components/angular-ui-utils/highlight.min.js"></script>
+<script src="../bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
 <script src="../bower_components/sparkline/index.js"></script>
 <script src="../bower_components/satellizer/satellizer.min.js"></script>
 <script src="../bower_components/mixpanel/mixpanel-jslib-snippet.min.js"></script>
@@ -102,7 +104,7 @@
 <script src="../bower_components/angulartics/dist/angulartics.min.js"></script>
 <script src="../bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
 <script src="../bower_components/angular-knowtify/dist/angular-knowtify.min.js"></script>
-<script src="../bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
+<script src="../bower_components/angular-aws-s3-upload/angular-s3.min.js"></script>
 
 <!-- endbuild -->
 
