working on tour

--- a/app/app.html
+++ b/app/app.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.min.css" />
     <link rel="stylesheet" href="../bower_components/angular-chart.js/dist/angular-chart.css">
     <link rel="stylesheet" href="../bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" />
-    <link rel="stylesheet" href="../bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css" />
     <link rel="stylesheet" href="../bower_components/angular-xeditable/dist/css/xeditable.css" />
+    <link rel="stylesheet" href="../bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -106,6 +106,8 @@
 <script src="../bower_components/angular-knowtify/dist/angular-knowtify.min.js"></script>
 <script src="../bower_components/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="../bower_components/ng-file-upload-shim/ng-file-upload-shim.min.js"></script>
+<script src="../bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js"></script>
+<script src="../bower_components/angular-bootstrap-tour/dist/angular-bootstrap-tour.min.js"></script>
 
 <!-- endbuild -->
 
