implemented live chat

--- a/app/app.html
+++ b/app/app.html
@@ -77,6 +77,22 @@
         j.type = t;j.async = true;j.src = u;p.parentNode.insertBefore(j, p);})(document,'script','text/javascript', 'https://s3.amazonaws.com/js.knowtify.io/knowtify.js');
 </script>
 
+<script type="text/javascript">
+    (function(w,d){
+        w.HelpCrunch=function(){w.HelpCrunch.q.push(arguments)};w.HelpCrunch.q=[];
+        var s=document.createElement('script');s.async=1;s.type='text/javascript';s.src='https://startupcommunity.helpcrunch.com/compiled/sdk.js';
+        d.body.appendChild(s);
+    })(window, document)
+</script>
+
+<script type="text/javascript">
+    HelpCrunch('init', 'startupcommunity', {
+        applicationId: 251,
+        applicationSecret: 'PEYaAy1sHVejNqw4eGwfL0Qda5t9JtLyR0tDT+4ItX5AKgvAvmm8RuOoOKKiG8xt49YpR7RyAkbca7PfpRBQGA=='
+    });
+
+</script>
+
 </body>
 
 <!-- build:js({.tmp,app}) scripts/vendor.js -->
