--- a/app/app.html
+++ b/app/app.html
@@ -26,9 +26,9 @@
     <!-- endbuild -->
 
     <!-- build:css({.tmp,app}) styles/style.css -->
-    <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
-    <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/helper.css" />
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/public/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
+    <link rel="stylesheet" href="/public/fonts/pe-icon-7-stroke/css/helper.css" />
+    <link rel="stylesheet" href="/public/styles/style.css">
     <!-- endbuild -->
 
     <!-- build:remove --><script src="http://localhost:35729/livereload.js"></script><!-- endbuild -->
@@ -102,7 +102,6 @@
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="../bower_components/iCheck/icheck.min.js"></script>
 <script src="../bower_components/sweetalert/dist/sweetalert.min.js"></script>
 <script src="../bower_components/angular-h-sweetalert/dist/ngSweetAlert.min.js"></script>
 <script src="../bower_components/angular-notify/dist/angular-notify.min.js"></script>
