--- a/app/app.html
+++ b/app/app.html
@@ -26,9 +26,9 @@
     <!-- endbuild -->
 
     <!-- build:css({.tmp,app}) styles/style.css -->
-    <link rel="stylesheet" href="/public/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
-    <link rel="stylesheet" href="/public/fonts/pe-icon-7-stroke/css/helper.css" />
-    <link rel="stylesheet" href="/public/styles/style.css">
+    <link rel="stylesheet" href="../build/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
+    <link rel="stylesheet" href="../build/fonts/pe-icon-7-stroke/css/helper.css" />
+    <link rel="stylesheet" href="../build/styles/style.css">
     <!-- endbuild -->
 
     <!-- build:remove --><script src="http://localhost:35729/livereload.js"></script><!-- endbuild -->
