working sourcemap log to server

--- a/app/app.html
+++ b/app/app.html
@@ -138,4 +138,6 @@
 <script src="components/common/errors/errors.controller.js"></script>
 <!-- endbuild -->
 
+<script src="https://cdn.rawgit.com/mozilla/source-map/master/dist/source-map.min.js" defer></script>
+
 </html>
