--- a/app/app.html
+++ b/app/app.html
@@ -135,6 +135,7 @@
 <script src="components/common/auth/auth.controller.js"></script>
 <script src="components/common/welcome/welcome.controller.js"></script>
 <script src="components/common/nav/nav.controller.js"></script>
+<script src="components/common/email.controller.js"></script>
 <script src="components/common/errors/errors.controller.js"></script>
 <!-- endbuild -->
 
