fix for ui-select test

--- a/app/app.html
+++ b/app/app.html
@@ -110,7 +110,7 @@
 <script src="../bower_components/satellizer/satellizer.min.js"></script>
 <script src="../bower_components/mixpanel/mixpanel-jslib-snippet.min.js"></script>
 <script src="../bower_components/angular-mixpanel/dist/angular-mixpanel.min.js"></script>
-<script src="../bower_components/angular-ui-select/dist/select.min.js"></script>
+<script src="../bower_components/angular-ui-select/dist/select.js"></script>
 <script src="../bower_components/Chart.js/Chart.min.js"></script>
 <script src="../bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 <script src="../bower_components/angulartics/dist/angulartics.min.js"></script>
