--- a/app/frontend.html
+++ b/app/frontend.html
@@ -112,7 +112,7 @@
                 <!-- Navigation Menu -->
                 <div class="collapse navbar-collapse" id="myMenu">
                   <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="/">Home</a></li>
+                    <li class="active"><a href="#home">Home</a></li>
                     <li><a href="#product">Product</a></li>
                     <li><a href="#communities">Communities</a></li>
                     <li><a href="https://startupcommunity.org/blog" target="_blank">Blog</a></li>
