--- a/app/frontend.html
+++ b/app/frontend.html
@@ -285,6 +285,7 @@
                                             <b>Brian Vierra</b> - <a href="http://www.edcoinfo.com" target="_blank">Economic Development for Central Oregon</a>
                                         </footer>
                                     </blockquote>
+                                    <a href="http://www.edcoinfo.com/stable-of-experts" class="btn btn-info" target="_blank" style="float: right; margin-right: 108px;">View Community</a>
                                 </div>
                                 <div class="col-md-4 col-sm-4 photo">
                                     <img src="frontend/images/testimonial/bend_big_white.png" style="width: 275px; padding-bottom:20px;" class="alignright" alt="Bend Logo">
@@ -304,6 +305,7 @@
                                             <b>Ryan Arnold</b> - <a href="http://startupspokane.com" target="_blank">Greater Spokane, Inc</a>
                                         </footer>
                                     </blockquote>
+                                    <a href="http://startupspokane.com/knowledge-network" class="btn btn-info" target="_blank" style="float: right; margin-right: 108px;">View Community</a>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-md-pull-8 col-sm-pull-8 photo">
                                     <img src="frontend/images/testimonial/spokane.png" style="width: 275px; padding-bottom:20px;" class="alignleft" alt="Spokane Logo">
@@ -323,6 +325,7 @@
                                             <b>Kelly Kearsley</b> - <a href="http://startupbend.com" target="_blank">StartupBend</a>
                                         </footer>
                                     </blockquote>
+                                    <a href="http://startupbend.com/startups" class="btn btn-info" target="_blank" style="float: right; margin-right: 156px;">View Community</a>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-md-pull-8 col-sm-pull-8 photo">
                                     <img src="frontend/images/testimonial/sub_logo_275w.png" style="width: 275px; padding-top:40px;" class="alignleft" alt="StartupBend Logo">
