turned animation on

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -127,7 +127,7 @@
     <div class="clearfix"></div>
     
     <!-- Start Home -->
-    <section id="" class="home bg-animate"> <!-- add AnimatedBg id back in -->
+    <section id="AnimatedBg" class="home bg-animate">
 		<div class="home-container">
 			<div class="container">
 				<div class="row">
