--- a/app/frontend.html
+++ b/app/frontend.html
@@ -420,7 +420,7 @@
             </div>
         </div>
         <div class="sub-footer">
-            2016 &copy; Copyright <a href="#">StartupCommunity.org</a> - All right reserved
+            2016 &copy; <a href="#">StartupCommunity.org</a> - All rights reserved
         </div>
     </footer>
     <!-- End Footer -->
