nav fixes and markets graph

--- a/app/app.html
+++ b/app/app.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../bower_components/sweetalert/dist/sweetalert.css" />
     <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.min.css" />
-    <link rel="stylesheet" href="../bower_components/angular-chart.js/dist/angular-chart.css">
     <link rel="stylesheet" href="../bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" />
     <link rel="stylesheet" href="../bower_components/angular-xeditable/dist/css/xeditable.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css" />
@@ -112,7 +111,7 @@
 <script src="../bower_components/angular-mixpanel/dist/angular-mixpanel.min.js"></script>
 <script src="../bower_components/angular-ui-select/dist/select.js"></script>
 <script src="../bower_components/Chart.js/Chart.min.js"></script>
-<script src="../bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
+<script src="../bower_components/angles/angles.js"></script>
 <script src="../bower_components/angulartics/dist/angulartics.min.js"></script>
 <script src="../bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
 <script src="../bower_components/angular-knowtify/dist/angular-knowtify.min.js"></script>
