--- a/app/app.html
+++ b/app/app.html
@@ -117,6 +117,7 @@
 <script src="../bower_components/ng-file-upload-shim/ng-file-upload-shim.min.js"></script>
 <script src="../bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js"></script>
 <script src="../bower_components/angular-bootstrap-tour/dist/angular-bootstrap-tour.min.js"></script>
+<script src="../bower_components/angular-toArrayFilter/toArrayFilter.js"></script>
 
 <!-- endbuild -->
 
