added opbeat for angular

--- a/app/app.html
+++ b/app/app.html
@@ -30,6 +30,8 @@
     <link rel="stylesheet" href="../build/styles/style.css">
     <!-- endbuild -->
 
+    <script src="https://d3tvtfb6518e3e.cloudfront.net/1/angular-opbeat.min.js"></script>
+
 </head>
 
 <!-- Body -->
