update to frontend

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -305,7 +305,7 @@
                                             <b>Ryan Arnold</b> - <a href="http://startupspokane.com" target="_blank">Greater Spokane, Inc</a>
                                         </footer>
                                     </blockquote>
-                                    <a href="http://startupspokane.com/knowledge-network" class="btn btn-info" target="_blank" style="float: right; margin-right: 108px;">View Community</a>
+                                    <a href="http://startupspokane.com/expertconnect" class="btn btn-info" target="_blank" style="float: right; margin-right: 108px;">View Community</a>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-md-pull-8 col-sm-pull-8 photo">
                                     <img src="frontend/images/testimonial/spokane.png" style="width: 275px; padding-bottom:20px;" class="alignleft" alt="Spokane Logo">
