--- a/app/app.html
+++ b/app/app.html
@@ -138,5 +138,5 @@
 <!-- endbuild -->
 
 <script src="https://cdn.rawgit.com/mozilla/source-map/master/dist/source-map.min.js" defer></script>
-<script src="https://d3tvtfb6518e3e.cloudfront.net/1/angular-opbeat.min.js"></script>
+<!--<script src="https://d3tvtfb6518e3e.cloudfront.net/1/angular-opbeat.min.js"></script>-->
 </html>
