working on edit company profile

--- a/app/app.html
+++ b/app/app.html
@@ -127,14 +127,14 @@
 <script src="scripts/directives.js"></script>
 <script src="scripts/services.js"></script>
 <script src="scripts/config.js"></script>
-<script src="components/common/dashboard/dashboard.controller.js"></script>
+<script src="components/dashboard/dashboard.controller.js"></script>
 <script src="components/users/user.controller.js"></script>
 <script src="components/companies/company.controller.js"></script>
-<script src="components/common/auth/auth.controller.js"></script>
-<script src="components/common/welcome/welcome.controller.js"></script>
-<script src="components/common/nav/nav.controller.js"></script>
-<script src="components/common/email.controller.js"></script>
-<script src="components/common/errors/errors.controller.js"></script>
+<script src="components/auth/auth.controller.js"></script>
+<script src="components/welcome/welcome.controller.js"></script>
+<script src="components/nav/nav.controller.js"></script>
+<script src="components/email.controller.js"></script>
+<script src="components/errors/errors.controller.js"></script>
 <!-- endbuild -->
 
 <script src="https://cdn.rawgit.com/mozilla/source-map/master/dist/source-map.min.js" defer></script>
