--- a/app/app.html
+++ b/app/app.html
@@ -134,6 +134,7 @@
 <script src="components/welcome/welcome.controller.js"></script>
 <script src="components/nav/nav.controller.js"></script>
 <script src="components/email.controller.js"></script>
+<script src="components/settings.controller.js"></script>
 <script src="components/errors/errors.controller.js"></script>
 <!-- endbuild -->
 
