--- a/app/frontend.html
+++ b/app/frontend.html
@@ -357,6 +357,96 @@
     <!-- End Testimonial -->
 
     <div class="clearfix"></div>
+
+    <!-- Start Pricing -->
+    <section id="pricing" class="gray">
+        <div class="container">
+            <!-- Start Title -->
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1 title-section">
+                    <h4 class="title"><span>Pricing</span> Pay as you grow</h4>
+                    <div class="line"><i class="icon icon-24 icon-clipboard"></i></div>
+                </div>
+            </div>
+            <!-- End Title -->
+            <!-- Start Pricing -->
+            <div class="row wrap-price">
+                <div class="col-md-4">
+                    <!-- Start Pricing Success -->
+                    <div class="table-price success">
+                        <div class="title-price">
+                            <h4>Industry Clusters</h4>
+                        </div>
+                        <div class="price">
+                            <h2><span>$</span>15<small class="point">/mo</small></h2>
+                        </div>
+                        <ul class="list-feature">
+                            <li class="current">Primary industries are <strong>free</strong></li>
+                            <li><strong>Anyone</strong> can join</li>
+                            <li class="current"><strong>Embed</strong> in your website</li>
+                            <li><strong>Add</strong> people & companies</li>
+                            <li class="current"><strong>Roll</strong>-up to state level</li>
+                            <li><strong>Automatic</strong> industry segmentation</li>
+                        </ul>
+                        <div class="footer-price">
+                            <a href="mailto:kickstart@startupcommunity.org?subject=I'd like to launch in my city.." target="_blank" class="btn btn-success">Get Started</a>
+                        </div>
+                    </div>
+                    <!-- End Pricing Success -->
+                </div>
+                <div class="col-md-4">
+                    <!-- Start Pricing Info -->
+                    <div class="table-price info">
+                        <div class="title-price">
+                            <h4>Private Networks</h4>
+                        </div>
+                        <div class="price">
+                            <h2><span>$</span>25<small class="point">/mo</small></h2>
+                        </div>
+                        <ul class="list-feature">
+                            <li class="current">or <strong>30&cent;</strong> per user</li>
+                            <li><strong>Invitation</strong>-only</li>
+                            <li class="current"><strong>Embed</strong> in your website</li>
+                            <li><strong>Manage</strong> people & companies</li>
+                            <li class="current"><strong>Roll</strong>-up to state level</li>
+                            <li><strong>Automatic</strong> industry segmentation</li>
+                        </ul>
+                        <div class="footer-price">
+                            <a href="mailto:kickstart@startupcommunity.org?subject=I'd like to launch in my city.." target="_blank" class="btn btn-info">Get Started</a>
+                        </div>
+                    </div>
+                    <!-- End Pricing Info -->
+                </div>
+                <div class="col-md-4">
+                    <!-- Start Pricing Danger -->
+                    <div class="table-price danger">
+                        <div class="title-price">
+                            <h4>New City</h4>
+                        </div>
+                        <div class="price">
+                            <h2><span>$</span>500<small class="point"></small></h2>
+                        </div>
+                        <ul class="list-feature">
+                            <li class="current"><strong>One-time</strong> setup fee</li>
+                            <li><strong>Also</strong> includes your state</li>
+                            <li class="current"><strong>One-on-one</strong> support</li>
+                            <li><strong>We help you</strong> launch</li>
+                            <li class="current"><strong>Leader</strong> status in city</li>
+                            <li>Ability to create <strong>custom regions</strong></li>
+                        </ul>
+                        <div class="footer-price">
+                            <a href="mailto:kickstart@startupcommunity.org?subject=I'd like to launch in my city.." target="_blank" class="btn btn-danger">Get Started</a>
+                        </div>
+                    </div>
+                    <!-- End Pricing Danger -->
+                </div>
+            </div>
+            <!-- End Pricing -->
+        </div>
+    </section>
+    <!-- End Pricing -->
+
+    <div class="clearfix"></div>
     
     <!-- Start Call to action -->
     <div class="cta-area">
