--- a/app/frontend.html
+++ b/app/frontend.html
@@ -2,9 +2,10 @@
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="de">  <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en">  <!--<![endif]-->
 <head>
 	<meta charset="utf-8">
+    <meta http-equiv="Content-Language" content="en">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>StartupCommunity.org - Kickstart your city's entrepreneurial ecosystem</title>
@@ -364,7 +365,7 @@
             <!-- Start Title -->
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 title-section">
-                    <h4 class="title"><span>Pricing</span> Pay as you grow</h4>
+                    <h4 class="title"><span>Pricing</span> Pay as you grow, cancel any time</h4>
                     <div class="line"><i class="icon icon-24 icon-clipboard"></i></div>
                 </div>
             </div>
@@ -439,6 +440,11 @@
                         </div>
                     </div>
                     <!-- End Pricing Danger -->
+                </div>
+                <div class="row">
+                    <div class="col-md-10 col-md-offset-1 title-section">
+                        <h4 class="title">No obligation, easy to launch</h4>
+                    </div>
                 </div>
             </div>
             <!-- End Pricing -->
