--- a/app/frontend.html
+++ b/app/frontend.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en">  <!--<![endif]-->
 <head>
 	<meta charset="utf-8">
+    <meta http-equiv="Content-Language" content="en">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>StartupCommunity.org - Kickstart your city's entrepreneurial ecosystem</title>
