--- a/app/frontend.html
+++ b/app/frontend.html
@@ -372,9 +372,32 @@
             <!-- End Title -->
             <!-- Start Pricing -->
             <div class="row wrap-price">
-                <div class="col-md-4">
+                <div class="col-md-3">
+                    <!-- Start Pricing Warning -->
+                    <div class="table-price warning" style="height: 608px;">
+                        <div class="title-price">
+                            <h4>Existing City</h4>
+                        </div>
+                        <div class="price">
+                            <h2>Free</h2>
+                        </div>
+                        <ul class="list-feature">
+                            <li class="current">Find people by <strong>role or skill</strong></li>
+                            <li>Sort companies by <strong>industry</strong></li>
+                            <li class="current">Create <strong>Accelerators, Coworking Spaces </strong>and more</li>
+                            <li>Create custom <strong>industries</strong></li>
+                            <li class="current"><strong>Roll</strong>-up to state level</li>
+                            <li><strong>Automatic</strong> industry segmentation</li>
+                        </ul>
+                        <div class="footer-price">
+                            <a href="mailto:kickstart@startupcommunity.org?subject=I'd like to launch in my city.." target="_blank" class="btn btn-warning">Get Started</a>
+                        </div>
+                    </div>
+                    <!-- End Pricing Warning -->
+                </div>
+                <div class="col-md-3">
                     <!-- Start Pricing Success -->
-                    <div class="table-price success">
+                    <div class="table-price success" style="height: 608px;">
                         <div class="title-price">
                             <h4>Industry Clusters</h4>
                         </div>
@@ -395,9 +418,9 @@
                     </div>
                     <!-- End Pricing Success -->
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <!-- Start Pricing Info -->
-                    <div class="table-price info">
+                    <div class="table-price info" style="height: 608px;">
                         <div class="title-price">
                             <h4>Private Networks</h4>
                         </div>
@@ -418,9 +441,9 @@
                     </div>
                     <!-- End Pricing Info -->
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <!-- Start Pricing Danger -->
-                    <div class="table-price danger">
+                    <div class="table-price danger" style="height: 608px;">
                         <div class="title-price">
                             <h4>New City</h4>
                         </div>
@@ -432,7 +455,7 @@
                             <li><strong>Also</strong> includes your state</li>
                             <li class="current"><strong>One-on-one</strong> support</li>
                             <li><strong>We help you</strong> launch</li>
-                            <li class="current"><strong>Leader</strong> status in city</li>
+                            <li class="current">You are identified as a <strong>Leader</strong> for your city</li>
                             <li>Ability to create <strong>custom regions</strong></li>
                         </ul>
                         <div class="footer-price">
