updated pricing anchor

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -116,6 +116,7 @@
                     <li class="active"><a href="#home">Home</a></li>
                     <li><a href="#product">Product</a></li>
                     <li><a href="#communities">Communities</a></li>
+                      <li><a href="#pricing">Pricing</a></li>
                     <li><a href="https://startupcommunity.org/blog" target="_blank">Blog</a></li>
                   </ul>
                 </div>
@@ -360,7 +361,8 @@
     <div class="clearfix"></div>
 
     <!-- Start Pricing -->
-    <section id="pricing" class="gray">
+    <a class="anchor" id="pricing"></a>
+    <section class="gray">
         <div class="container">
             <!-- Start Title -->
             <div class="row">
