fixed pricing anchor

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -361,8 +361,7 @@
     <div class="clearfix"></div>
 
     <!-- Start Pricing -->
-    <a class="anchor" id="pricing"></a>
-    <section class="gray">
+    <section id="pricing" class="gray">
         <div class="container">
             <!-- Start Title -->
             <div class="row">
