added alternate for cors

--- a/app/app.html
+++ b/app/app.html
@@ -89,6 +89,9 @@
     });
 </script>
 
+<!-- Alternative solution for CORS -->
+<script src="//cdn.rawgit.com/jpillora/xdomain/0.7.4/dist/xdomain.min.js" slave="http://email.startupcommunity.org/proxy.html"></script>
+
 </body>
 
 <!-- build:js({.tmp,app}) scripts/vendor.js -->
