--- a/app/app.html
+++ b/app/app.html
@@ -90,7 +90,7 @@
 </script>
 
 <!-- Alternative solution for CORS -->
-<script src="//cdn.rawgit.com/jpillora/xdomain/0.7.4/dist/xdomain.min.js" slave="https://email.startupcommunity.org/proxy.html"></script>
+<script src="//cdn.rawgit.com/jpillora/xdomain/0.7.4/dist/xdomain.min.js" slave="https://email2.startupcommunity.org/proxy.html"></script>
 
 </body>
 
