--- a/app/app.html
+++ b/app/app.html
@@ -100,7 +100,7 @@
 <script src="../bower_components/stacktrace-js/dist/stacktrace.min.js"></script>
 <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-<script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="../bower_components/sweetalert/dist/sweetalert.min.js"></script>
 <script src="../bower_components/angular-h-sweetalert/dist/ngSweetAlert.min.js"></script>
