--- a/app/frontend.html
+++ b/app/frontend.html
@@ -373,9 +373,10 @@
             <!-- End Title -->
             <!-- Start Pricing -->
             <div class="row wrap-price">
-                <div class="col-md-6">
+                <div class="col-md-1"></div>
+                <div class="col-md-5">
                     <!-- Start Pricing Success -->
-                    <div class="table-price success" style="height: 583px;">
+                    <div class="table-price success" style="height: 607px;">
                         <div class="title-price">
                             <h4>Community Members</h4>
                         </div>
@@ -393,9 +394,9 @@
                     </div>
                     <!-- End Pricing Success -->
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <!-- Start Pricing Info -->
-                    <div class="table-price info" style="height: 583px;">
+                    <div class="table-price info" style="height: 607px;">
                         <div class="title-price">
                             <h4>Community Managers</h4>
                         </div>
@@ -405,17 +406,18 @@
                         <ul class="list-feature">
                             <li class="current">Create <strong>custom industries</strong> and <strong>private networks</strong></li>
                             <li><strong>Manage </strong>people, companies, and resources</li>
-                            <li class="current"><strong>Embed</strong> in your website</li>
-                            <li><strong>Track</strong> economic growth by industry</li>
+                            <li class="current"><strong>Track</strong> economic growth by industry</li>
+                            <li><strong>Embed</strong> in your website</li>
                             <li class="current"><strong>Aggregate</strong> data across your state</li>
                         </ul>
                         <div class="footer-price">
-                            <p>Private networks add 30&cent; per network member<br>New cities have a one-time setup fee of $500</p>
+                            <p>+ 20&cent; per member of private networks you manage<br>New citiy one-time setup fee is $500</p>
                             <a href="mailto:kickstart@startupcommunity.org?subject=I'd like to launch in my city.." target="_blank" class="btn btn-info">Get Started</a>
                         </div>
                     </div>
                     <!-- End Pricing Info -->
                 </div>
+                <div class="col-md-1"></div>
             </div>
             <!-- End Pricing -->
         </div>
