switched email. to newsletter.

--- a/app/app.html
+++ b/app/app.html
@@ -90,7 +90,7 @@
 </script>
 
 <!-- Alternative solution for CORS -->
-<script src="//cdn.rawgit.com/jpillora/xdomain/0.7.4/dist/xdomain.min.js" slave="https://email.startupcommunity.org/proxy.html"></script>
+<script src="//cdn.rawgit.com/jpillora/xdomain/0.7.4/dist/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
 
 </body>
 
@@ -135,7 +135,7 @@
 <script src="components/auth/auth.controller.js"></script>
 <script src="components/welcome/welcome.controller.js"></script>
 <script src="components/nav/nav.controller.js"></script>
-<script src="components/email.controller.js"></script>
+<script src="components/newsletter/newsletter.controller.js"></script>
 <script src="components/errors/errors.controller.js"></script>
 <!-- endbuild -->
 
