--- a/app/app.html
+++ b/app/app.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <base href="/" target="_parent" />  <!-- parent forces links out of iframe if embedded -->
+    <base href="/">
     <title page-title></title>
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&lang=en' rel='stylesheet' type='text/css'>
