--- a/app/app.html
+++ b/app/app.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="../bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" />
     <link rel="stylesheet" href="../bower_components/angular-xeditable/dist/css/xeditable.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css" />
+    <link rel="stylesheet" href="../bower_components/ladda/dist/ladda-themeless.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -120,6 +121,10 @@
 <script src="../bower_components/ng-file-upload-shim/ng-file-upload-shim.min.js"></script>
 <script src="../bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js"></script>
 <script src="../bower_components/angular-bootstrap-tour/dist/angular-bootstrap-tour.min.js"></script>
+<script src="../bower_components/ladda/dist/spin.min.js"></script>
+<script src="../bower_components/ladda/dist/ladda.min.js"></script>
+<script src="../bower_components/ladda/dist/ladda.jquery.min.js"></script>
+<script src="../bower_components/angular-ladda/dist/angular-ladda.min.js"></script>
 
 <!-- endbuild -->
 
