moving email to server

--- a/app/app.html
+++ b/app/app.html
@@ -91,7 +91,7 @@
 </script>
 
 <!-- Alternative solution for CORS -->
-<script src="//cdn.rawgit.com/jpillora/xdomain/0.7.4/dist/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
+<script src="scripts/xdomain.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
 
 </body>
 
