--- a/app/app.html
+++ b/app/app.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../bower_components/angular-xeditable/dist/css/xeditable.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css" />
     <link rel="stylesheet" href="../bower_components/ladda/dist/ladda-themeless.min.css" />
+    <link rel="stylesheet" href="../bower_components/summernote/dist/summernote.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -125,6 +126,8 @@
 <script src="../bower_components/ladda/dist/ladda.min.js"></script>
 <script src="../bower_components/ladda/dist/ladda.jquery.min.js"></script>
 <script src="../bower_components/angular-ladda/dist/angular-ladda.min.js"></script>
+<script src="../bower_components/summernote/dist/summernote.min.js"></script>
+<script src="../bower_components/angular-summernote/dist/angular-summernote.min.js"></script>
 
 <!-- endbuild -->
 
