--- a/app/app.html
+++ b/app/app.html
@@ -31,6 +31,14 @@
     <link rel="stylesheet" href="../build/styles/style.css">
     <!-- endbuild -->
 
+    <!-- SceenSquid Satellite Link -->
+    <script type="text/javascript">
+        var __squid = [];
+        var __squid_id = "startupcommunityorg__5f05a210_00c9_11e6_8500_2585dc853be1";
+    </script>
+    <script type="text/javascript" src="https://www.screensquid.tv/embed/screensquid.js"></script>
+    <!-- http://screensquid.com -->
+
 </head>
 
 <!-- Body -->
