--- a/app/app.html
+++ b/app/app.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+<!-- Alternative solution for CORS -->
+<script src="https://cdn.rawgit.com/jpillora/xdomain/0.7.4/dist/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
+
 <html ng-app="startupcommunity">
 <head>
 
@@ -124,9 +128,6 @@
 <script src="../bower_components/angular-ladda/dist/angular-ladda.min.js"></script>
 
 <!-- endbuild -->
-
-<!-- Alternative solution for CORS -->
-<script src="scripts/xdomain.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/misc.js"></script>
