--- a/app/app.html
+++ b/app/app.html
@@ -99,7 +99,7 @@
 
 <!-- build:js({.tmp,app}) scripts/vendor.js -->
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script src="../bower_components/angular/angular.js"></script>
+<script src="../bower_components/angular/angular.min.js"></script>
 <script src="../bower_components/stacktrace-js/dist/stacktrace.min.js"></script>
 <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
