--- a/app/app.html
+++ b/app/app.html
@@ -96,7 +96,7 @@
 <script src="../bower_components/satellizer/satellizer.min.js"></script>
 <script src="../bower_components/mixpanel/mixpanel-jslib-snippet.min.js"></script>
 <script src="../bower_components/angular-mixpanel/dist/angular-mixpanel.min.js"></script>
-<script src="../bower_components/angular-ui-select/dist/select.js"></script>
+<script src="../bower_components/angular-ui-select/dist/select.min.js"></script>
 <script src="../bower_components/angulartics/dist/angulartics.min.js"></script>
 <script src="../bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
 <script src="../bower_components/angular-knowtify/dist/angular-knowtify.min.js"></script>
