--- a/app/app.html
+++ b/app/app.html
@@ -31,6 +31,29 @@
     <link rel="stylesheet" href="../build/styles/style.css">
     <!-- endbuild -->
 
+    <script type="text/javascript">
+        (function(e, t) {
+            function r(e, t) {
+                e[t] = function() {
+                    e.push([ t ].concat(Array.prototype.slice.call(arguments, 0)));
+                };
+            }
+            var n = "JacoRecorder";
+            (function(e, t, i, s) {
+                if (!i.__VERSION) {
+                    e[n] = i;
+                    var o = [ "init", "identify", "startRecording", "stopRecording", "removeUserTracking", "setUserInfo" ];
+                    for (var u = 0; u < o.length; u++) r(i, o[u]);
+                    i.__VERSION = .9, i.__INIT_TIME = 1 * new Date;
+                    var a = t.createElement("script");
+                    a.async = !0, a.setAttribute("crossorigin", "anonymous"), a.src = s;
+                    var f = t.getElementsByTagName("head")[0];
+                    f.appendChild(a);
+                }
+            })(e, t, e[n] || [], "//recorder-assets.getjaco.com/recorder.js");
+        }).call(window, window, document), window.JacoRecorder.push([ "init", "54ad6c47-2366-4979-bfdc-c00bd09ab7c7", {} ]);
+    </script>
+
 </head>
 
 <!-- Body -->
