--- a/app/app.html
+++ b/app/app.html
@@ -31,6 +31,11 @@
     <link rel="stylesheet" href="../build/styles/style.css">
     <!-- endbuild -->
 
+    <script
+            src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js"
+            data-apikey="a46f2b2ce2b4bcd599be18c86f2fe8ce">
+    </script>
+
     <script type="text/javascript">
         (function(e, t) {
             function r(e, t) {
