--- a/app/app.html
+++ b/app/app.html
@@ -32,7 +32,7 @@
     <!-- endbuild -->
 
     <script
-            src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js"
+            src="https://d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js"
             data-apikey="a46f2b2ce2b4bcd599be18c86f2fe8ce">
     </script>
 
@@ -55,7 +55,7 @@
                     var f = t.getElementsByTagName("head")[0];
                     f.appendChild(a);
                 }
-            })(e, t, e[n] || [], "//recorder-assets.getjaco.com/recorder.js");
+            })(e, t, e[n] || [], "https://recorder-assets.getjaco.com/recorder.js");
         }).call(window, window, document), window.JacoRecorder.push([ "init", "54ad6c47-2366-4979-bfdc-c00bd09ab7c7", {} ]);
     </script>
 
