added jayco link

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -506,6 +506,9 @@
                     <div class="col-md-3 footer-item">
                         <h5 class="title-footer">Contact us</h5>
                         <a href="mailto:kickstart@startupcommunity.org" target="_blank">kickstart@startupcommunity.org</a>
+                        <div style="padding-top: 33px;">
+                            <a href='//getjaco.com' rel='nofollow' target='_blank'><img src='//www.getjaco.com/images/free_with_logo/jaco-badge-white.png' alt='Jaco Analytics' /></a>
+                        </div>
                     </div>
                 </div>
             </div>
