--- a/app/app.html
+++ b/app/app.html
@@ -91,7 +91,7 @@
 <div ui-view></div>
 
 <!-- Alternative solution for CORS -->
-<script src="https://cdn.rawgit.com/jpillora/xdomain/0.7.4/dist/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
+<script src="scripts/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
 
 <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -161,5 +161,5 @@
 <script src="components/newsletter/newsletter.controller.js"></script>
 <!-- endbuild -->
 
-<script src="https://cdn.rawgit.com/mozilla/source-map/master/dist/source-map.min.js" defer></script>
+<script src="scripts/source-map.min.js" defer></script>
 </html>
