--- a/app/frontend.html
+++ b/app/frontend.html
@@ -74,6 +74,8 @@
             })(e, t, e[n] || [], "//recorder-assets.getjaco.com/recorder.js");
         }).call(window, window, document), window.JacoRecorder.push([ "init", "54ad6c47-2366-4979-bfdc-c00bd09ab7c7", {} ]);
     </script>
+
+    <meta name="verifyownership" content="e17865f422ed7ed5370eee6650278a94" />
 	
 </head>
 
