--- a/app/app.html
+++ b/app/app.html
@@ -25,8 +25,8 @@
     <!-- endbuild -->
 
     <!-- build:css({.tmp,app}) styles/style.css -->
-    <link rel="stylesheet" href="../build/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
-    <link rel="stylesheet" href="../build/fonts/pe-icon-7-stroke/css/helper.css" />
+    <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
+    <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/helper.css" />
     <link rel="stylesheet" href="../build/styles/style.css">
     <!-- endbuild -->
 
