removed blog due to ghost exceptions

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -140,7 +140,7 @@
                     <li><a href="#product">Product</a></li>
                     <li><a href="#communities">Communities</a></li>
                       <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="https://startupcommunity.org/blog" target="_blank">Blog</a></li>
+                    <!--<li><a href="https://startupcommunity.org/blog" target="_blank">Blog</a></li>-->
                   </ul>
                 </div>
             </div>
